Unify period display in GUI